argocd/platform/observability/prereqs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    trust.home.arpa/enabled: "true"
