argocd/platform/observability/prereqs/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: grafana
  namespace: observability
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.110.233
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: grafana.lab.zerodi.ru
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: grafana.lab.zerodi.ru
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: grafana-tls
      allowedRoutes:
        namespaces:
          from: Same
