argocd/platform/observability/prereqs/redirect-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http-redirect
  namespace: observability
spec:
  parentRefs:
    - name: grafana
      sectionName: http
  hostnames:
    - grafana.home.arpa
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
